working on footer. fixed bug for carousel on small screens

--- a/client/app/foundation/foundation.scss
+++ b/client/app/foundation/foundation.scss
@@ -76,7 +76,6 @@
     }
 
     header {
-            min-height:100px;
             margin-bottom:18;
             clear:both;
             h2 {
@@ -92,7 +91,6 @@
     }
 
     footer {
-        min-height:135px;
         clear:both;
         a {
             display:inline-block;
@@ -105,7 +103,6 @@
     }
 
     more {
-        min-height:135px;
         clear:both;
         a {
             display:inline-block;
